# internal/models/responses.go
@@ -35,11 +35,16 @@ type RespostaOperacaoLoja struct {
 	Message    string     `json:"message"`
 }
 
-// RespostaStatusLoja representa a resposta para consulta de status
-type RespostaStatusLoja struct {
-	Plataforma Plataforma `json:"plataforma"`
-	IdLoja     string     `json:"id_loja"`
-	Status     Status     `json:"status"`
+// RespostaStatusMultiplasLojas representa a resposta para consulta de status de múltiplas lojas
+type RespostaStatusMultiplasLojas struct {
+	Plataforma Plataforma           `json:"plataforma"`
+	Lojas      []StatusLojaDetalhes `json:"lojas"`
+}
+
+// StatusLojaDetalhes representa os detalhes de status de uma loja específica
+type StatusLojaDetalhes struct {
+	IdLoja string `json:"id_loja"`
+	Status Status `json:"status"`
 }
 
 // RespostaErro representa uma resposta de erro
